[package]
name = "inkwell_internals"
version = "0.1.0"
authors = ["Daniel Kolsoi <thadan64@gmail.com>"]
description = "Internal macro crate for inkwell"
edition = "2018"
build = "build.rs"
repository = "https://github.com/TheDan64/inkwell"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
quote = "0.6"
syn = { version = "0.15", features = ["full", "fold"] }
proc-macro2 = "0.4"

[build-dependencies]
cargo_toml = "0.8"
reqwest = "0.9"

[lib]
proc-macro = true
