[package]
authors = ["Daniel Kolsoi <thadan64@gmail.com>"]
description = "Internal macro crate for inkwell"
edition = "2024"
license = "Apache-2.0"
name = "inkwell_internals"
readme = "README.md"
repository = "https://github.com/TheDan64/inkwell"
version = "0.11.0"

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "fold"] }

[lib]
proc-macro = true

[features]
nightly = []
